Add vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,42 +1,16 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "framework": "nextjs",
+  "buildCommand": "next build",
+  "outputDirectory": ".next",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "builds": [
     {
-      "src": "package.json",
+      "src": "next.config.js",
       "use": "@vercel/next"
     }
   ],
-  "build": {
-    "env": {
-      "NODE_OPTIONS": "--max_old_space_size=4096",
-      "NEXT_PUBLIC_VERCEL_URL": "reform-uk-erdington.vercel.app"
-    }
-  },
-  "cleanUrls": true,
-  "public": true,
-  "regions": ["lhr1"],
-  "github": {
-    "enabled": true,
-    "silent": true
-  },
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./",
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  },
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
-    }
-  ]
+  "env": {
+    "NEXT_TELEMETRY_DISABLED": "1"
+  }
 }
