Update Node.js version and dependencies

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "5.3.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   },
   "overrides": {
     "postcss": "^8.4.35"
