Add custom build script for improved build process

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' next build",
+    "build": "node scripts/build.js",
     "start": "next start",
     "lint": "next lint"
   },
