--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/build.js",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -23,6 +23,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "framer-motion": "^12.0.6",
+    "micromatch": "4.0.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
@@ -39,6 +40,10 @@
     "node": "18.x"
   },
   "overrides": {
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "micromatch": "4.0.4"
+  },
+  "resolutions": {
+    "micromatch": "4.0.4"
   }
 }
