--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,20 @@
 {
   "version": 2,
-  "buildCommand": "npm install --no-optional && NODE_OPTIONS='--max-old-space-size=4096' next build",
-  "installCommand": "npm install --no-optional",
-  "framework": "nextjs",
+  "buildCommand": "cross-env NEXT_DISABLE_FILE_SYSTEM_API=1 NODE_OPTIONS='--max-old-space-size=4096' node scripts/custom-build.js",
+  "installCommand": "npm install",
+  "framework": null,
   "outputDirectory": ".next",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1",
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "__NEXT_DISABLE_MEMORY_WATCHER": "true",
+    "__NEXT_DISABLE_TELEMETRY": "true",
+    "NEXT_DISABLE_FILE_SYSTEM_API": "1"
   }
 }
