fix: update environment variable names to start with letters for Vercel compliance

--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1",
     "NODE_ENV": "production",
-    "__NEXT_DISABLE_MEMORY_WATCHER": "true",
-    "__NEXT_DISABLE_TELEMETRY": "true",
+    "NEXT_DISABLE_MEMORY_WATCHER": "true",
+    "NEXT_DISABLE_TELEMETRY": "true",
     "NEXT_DISABLE_FILE_SYSTEM_API": "1"
   }
 }
