fix: set Next.js environment variables in buildCommand instead of env section

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cross-env NEXT_DISABLE_FILE_SYSTEM_API=1 NODE_OPTIONS='--max-old-space-size=4096' node scripts/custom-build.js",
+  "buildCommand": "cross-env NEXT_DISABLE_FILE_SYSTEM_API=1 NODE_OPTIONS='--max-old-space-size=4096' NEXT_DISABLE_MEMORY_WATCHER=1 NEXT_DISABLE_TELEMETRY=1 node scripts/custom-build.js",
   "installCommand": "npm install",
   "framework": null,
   "outputDirectory": ".next",
