fix: simplify build configuration to use Vercel defaults

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NEXT_DISABLE_FILE_SYSTEM_API=1 node scripts/custom-build.js",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
