chore: simplify environment variables to essentials only

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
 # Base URL for metadata (required)
-NEXT_PUBLIC_BASE_URL=https://reformerdington.co.uk
+NEXT_PUBLIC_BASE_URL=https://your-domain.com
 
 # Google Analytics ID (optional)
 NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 
-# Mailchimp Newsletter Integration (required for newsletter functionality)
-MAILCHIMP_API_KEY=your-api-key
-MAILCHIMP_LIST_ID=your-list-id
-MAILCHIMP_API_SERVER=your-server-prefix
+# Future Integrations (currently disabled)
+# ======================================
 
-# SMTP Settings for Volunteer Form (required for volunteer form functionality)
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your-smtp-user
-SMTP_PASSWORD=your-smtp-password
-SMTP_FROM=noreply@example.com
+# # Mailchimp Newsletter Integration
+# MAILCHIMP_API_KEY=your-api-key
+# MAILCHIMP_LIST_ID=your-list-id
+# MAILCHIMP_API_SERVER=your-server-prefix
+
+# # SMTP Settings for Volunteer Form
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_USER=your-smtp-user
+# SMTP_PASSWORD=your-smtp-password
+# SMTP_FROM=noreply@example.com
