--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "framer-motion": "^12.0.6",
-    "micromatch": "4.0.4",
+    "micromatch": "^4.0.5",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
@@ -42,10 +42,6 @@
     "node": "18.x"
   },
   "overrides": {
-    "postcss": "^8.4.35",
-    "micromatch": "4.0.4"
-  },
-  "resolutions": {
-    "micromatch": "4.0.4"
+    "postcss": "^8.4.35"
   }
 }
