fix: Update Vercel config for static export

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "next build"
+  "buildCommand": "next build",
+  "outputDirectory": "out",
+  "cleanUrls": true
 }
