--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "version": 2
+  "version": 2,
+  "buildCommand": "next build",
+  "env": {
+    "NODE_OPTIONS": "--max-old-space-size=4096",
+    "__NEXT_DISABLE_MEMORY_WATCHER": "1"
+  }
 }
