--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
   "buildCommand": "next build",
+  "installCommand": "npm install --ignore-scripts",
   "env": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
-    "__NEXT_DISABLE_MEMORY_WATCHER": "1"
+    "__NEXT_DISABLE_MEMORY_WATCHER": "1",
+    "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
