--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "next build",
   "installCommand": "npm install --ignore-scripts",
+  "buildCommand": "rm -f scripts/patch-next.js && npm run build",
   "env": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
     "__NEXT_DISABLE_MEMORY_WATCHER": "1",
