--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "version": 2,
-  "env": {
-    "NODE_OPTIONS": "--max-old-space-size=4096",
-    "__NEXT_DISABLE_MEMORY_WATCHER": "1",
-    "NEXT_TELEMETRY_DISABLED": "1"
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "out",
+  "framework": "nextjs"
 }
