--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "rm -rf .next out && next build",
-    "start": "npx serve out",
+    "build": "rm -rf .next out && next build && next export",
+    "start": "npx serve out -p 3000",
+    "preview": "npm run build && npm run start",
     "lint": "next lint"
   },
   "dependencies": {
