--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "installCommand": "npm install --no-optional",
+  "buildCommand": "rm -rf .next && npm run build",
+  "installCommand": "npm install --ignore-scripts --no-optional",
   "env": {
     "NODE_OPTIONS": "--max-old-space-size=4096",
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "__NEXT_DISABLE_MEMORY_WATCHER": "1",
+    "NEXT_SHARP_PATH": "./node_modules/sharp"
   }
 }
