--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "framer-motion": "^12.0.6",
+    "glob": "^11.0.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
@@ -31,8 +32,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
-    "superagent": "^9.0.0",
+    "superagent": "^10.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   },
