--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@heroicons/react": "^2.0.18",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "20.10.4",
+    "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "18.2.42",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "18.2.17",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.16",
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "rimraf": "^6.0.1",
+    "rss-parser": "^3.13.0",
     "sharp": "^0.33.5",
     "superagent": "^10.1.1",
     "tailwindcss": "^3.4.1",
