Add database integration for Reform News
- Set up SQLite database with Prisma
- Add news article and search query models
- Implement pagination and search functionality
- Add sorting and filtering capabilities
- Track article views and search analytics

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,1 @@
-# Base URL for metadata (required)
-NEXT_PUBLIC_BASE_URL=https://your-domain.com
-
-# Google Analytics ID (optional)
-NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-
-# Future Integrations (currently disabled)
-# ======================================
-
-# # Mailchimp Newsletter Integration
-# MAILCHIMP_API_KEY=your-api-key
-# MAILCHIMP_LIST_ID=your-list-id
-# MAILCHIMP_API_SERVER=your-server-prefix
-
-# # SMTP Settings for Volunteer Form
-# SMTP_HOST=smtp.example.com
-# SMTP_PORT=587
-# SMTP_USER=your-smtp-user
-# SMTP_PASSWORD=your-smtp-password
-# SMTP_FROM=noreply@example.com
+DATABASE_URL="file:./dev.db"
