--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@prisma/client": "^6.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
@@ -23,12 +24,15 @@
     "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "fast-xml-parser": "^4.5.1",
     "framer-motion": "^12.0.6",
     "glob": "^11.0.1",
     "next": "^14.2.23",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.9",
     "postcss": "^8.4.35",
+    "prisma": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
