--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.17",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.16",
+    "axios": "^1.7.9",
     "critters": "^0.0.23",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
