--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.42",
     "@types/react-dom": "18.2.17",
-    "@types/xml2js": "^0.4.14",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.16",
     "axios": "^1.7.9",
     "critters": "^0.0.23",
@@ -44,8 +42,7 @@
     "sharp": "^0.33.5",
     "superagent": "^10.1.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3",
-    "xml2js": "^0.6.2"
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": "18.x"
