--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "18.2.17",
     "@vercel/analytics": "^1.1.1",
+     "canvas-confetti": "^1.9.2",
     "autoprefixer": "10.4.16",
     "axios": "^1.7.9",
     "critters": "^0.0.23",
