--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "18.2.17",
     "@vercel/analytics": "^1.1.1",
-     "canvas-confetti": "^1.9.2",
     "autoprefixer": "10.4.16",
     "axios": "^1.7.9",
     "critters": "^0.0.23",
@@ -45,6 +44,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0"
+  }
   "engines": {
     "node": "18.x"
   },
