--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.9.0"
+     "canvas-confetti": "^1.9.2"
   },
   "engines": {
     "node": "18.x"
